# soc-caseforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: architecture.md  demo-report.md  threat-model.md
soc_caseforge/: __init__.py  analysis.py  cli.py  indicators.py  models.py  reporting.py  storage.py
soc_caseforge/data/: __init__.py
soc_caseforge/parsers/: __init__.py  openssh.py
tests/: test_indicators.py  test_parsers.py  test_reporting_cli.py  test_storage_analysis.py
