[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "z3x-soc-caseforge"
version = "0.1.0"
description = "Local-first SOC case workspace for sanitized evidence, deterministic detections, and analyst reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Zaid Hijazi" }]
dependencies = []
keywords = ["cybersecurity", "soc", "blue-team", "incident-response", "threat-hunting", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.scripts]
soc-caseforge = "soc_caseforge.cli:main"

[tool.setuptools.packages.find]
include = ["soc_caseforge*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.setuptools.package-data]
"soc_caseforge.data" = ["*.log"]
